tests/safety/reject/pow_overflow.keel
def main(sys: System); Io:
    println(2 ** 100)
